--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@hexlet/code",
-  "type": "module",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/HazretAger/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/HazretAger/frontend-project-lvl1/actions)",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +20,12 @@
     "url": "https://github.com/HazretAger/frontend-project-lvl1/issues"
   },
   "homepage": "https://github.com/HazretAger/frontend-project-lvl1#readme",
-  "bin": {
-    "brain-games": "bin/brain-games.js"
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2"
   }
 }
